# dev-project

./: Dockerfile  automate.py  example_custom_api_config.json  example_service_agent_assistant.json  pyproject.toml  sonar-project.properties
.github/workflows/: actions.yaml  deploy.yaml  import.yaml  test-tagging.yaml  version-tagging.yml
docs/: ARCHITECTURE_DETAILED.md  AUTHENTICATION_AUTHORIZATION.md  BUSINESS_TOOLS_GUIDE.md  CLEANUP_SUMMARY.md  CONFIGURABLE_SUMMARIES.md  CUSTOMER_PROFILES.md  DATABASE_COLLECTIONS_STRUCTURE.md  DEBUGGING_OBSERVABILITY.md  DEPLOYMENT_CONFIGURATION.md  LLM_SERVICES_GUIDE.md  MIGRATION_SUMMARY.md  NEW_DOCUMENTATION_SUMMARY.md  OUTBOUND_CALL_TOKEN_FLOW.md  QUICK_START.md  STT_TTS_SERVICES_GUIDE.md
docs/guides/: engaging-words-system.md  tool-usage-examples.md
event-management/: .gitignore  Dockerfile  pyproject.toml
event-management/manifestfiles/dev/: dev_mani.yaml
event-management/src/app/api/: circuitry_advisor_tool.py
event-management/src/app/auth0/: __init__.py  auth_service.py
event-management/src/app/client_api/circuitry/: __init__.py
event-management/src/app/client_api/circuitry/utils/: __init__.py  advisor_tools.py
event-management/src/app/core/: config.py  logger.py
event-management/src/app/models/: event.py
event-management/src/app/utils/: __init__.py
manifestfiles/dev/: dev_mani.yaml
manifestfiles/prod/: prod_mani.yaml
manifestfiles/sandbox/: sandbox_mani.yaml  sandbox_manifestfiles.yaml
pipecat/: .dockerignore  .gitignore  README.md  example_multi_step_business_tool_config.json  example_oauth2_tool_config.json  fixed_config.json
pipecat/.github/workflows/: deploy.yaml  sonarqube.yml
pipecat/docs/: ADVANCED_PIPELINE_ARCHITECTURE.md  API_GUIDE.md  ARCHITECTURE_OVERVIEW.md  CONTEXT_ENRICHMENT.md  CUSTOMER_PROFILE_MANAGER_GUIDE.md  CUSTOM_PROCESSORS_GUIDE.md  FILE_STRUCTURE.md  README.md  SESSION_MANAGEMENT.md  TELEPHONY_FLOWS.md  dnd_v2.md
pipecat/docs/guides/: multi-step-workflows.md
pipecat/examples/: vad_usage_example.py
pipecat/manifestfiles/prod-us/: produs_mani.yaml
pipecat/src/app/: main.py
pipecat/src/app/agents/: base_agent.py
pipecat/src/app/api/: artifact_api.py  assistant_api.py  customer_profile_api.py  dependencies.py  log_api.py  pipecat_api.py  plivo_api.py  session_api.py  twilio_api.py  (+2 more)
project/: admin.yaml  backend-web.yaml  celery-workers.yaml  ingress.yaml  mojro-delivery.yaml  otp-redirection.yaml  previous-version.yaml  secrets.yaml  staging-deploy.yaml  test.yaml
scripts/: migrate_assistant.py  schemas.py
src/app/: main.py
src/app/api/: __init__.py  chat_api.py  ingest.py  routes.py  token_api.py  ui_api.py
src/app/core/: config.py  logging_config.py  metrics.py  tracing_config.py
src/app/db/: database.py
src/app/managers/: __init__.py  organization_manager.py  session_manager.py
src/app/models/: __init__.py  circuitry_advisor.py
src/app/processors/: audio_logging_processor.py  filler_words_processor.py  idle_handler.py  multi_tts_router.py  webrtc_user_text_sender.py
src/app/schemas/: api_schema.py  base_schema.py  log_export_schema.py  pagination_schema.py  participant_schema.py  pipecat_schemas.py  plivo_schemas.py  telephony_schemas.py  user_schema.py
src/app/services/: crm_context_enricher.py  customer_profile_service.py  encryption_service.py  post_call_parameter_fixer.py  token_manager.py  token_provider.py  warm_transfer_service.py
src/app/templates/: twilio_streams.xml  webrtc_client.html  websocket_chat.html
src/app/tools/: __init__.py  call_scheduler_tool.py  hangup_tool.py  warm_transfer_tool.py
src/app/utils/: __init__.py  audio_utils.py  auth_utils.py  oauth2_client.py  session_log_utils.py  time_parse_utils.py
src/docs/: APPLICATION_CODE_UNDERSTANDING.md
(+141 files in other folders)
